--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.6",
+    "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.3"
   }
 }
