--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@babel/runtime": "^7.16.5",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "react-hot-loader": "^4.13.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
@@ -28,6 +30,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.24.0",
     "joi": "^17.5.0",
     "lodash": "^4.17.21",
