--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "serve": "serve build",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "build:analyze": "npm run build -- --env addon=bundleanalyze"
   },
@@ -23,6 +24,7 @@
     "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "react-hot-loader": "^4.13.0",
+    "serve": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0",
