--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,32 @@
 {
-  "name": "Pockett app",
   "short_name": "Pockett",
-  "start_url": "/",
-  "scope": "/",
+  "name": "Pockett | Manage your money",
+  "description": "Manage your income easily with Pockett",
+  "start_url": ".",
+  "id": ".",
+  "display": "standalone",
+  "theme_color": "#f69435",
+  "background_color": "#ffffff",
   "icons": [
     {
-      "src": "assets/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+        "src": "/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
     },
     {
-      "src": "assets/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
+        "src": "/icon-256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
     },
     {
-      "src": "assets/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
+        "src": "/icon-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
     },
     {
-      "src": "assets/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+        "src": "/icon-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
     }
-  ],
-  "theme_color": "#e76f51",
-  "background_color": "#FFFFFF",
-  "display": "standalone",
-  "orientation": "portrait"
+  ]
 }
