--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.6",
     "react-router-dom": "^6.2.1",
