--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": ".",
   "id": ".",
   "display": "standalone",
-  "theme_color": "#e76f51",
+  "theme_color": "#14242a",
   "background_color": "#ffffff",
   "icons": [
     {
