--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.16.5",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
@@ -26,6 +27,7 @@
     "react-hot-loader": "^4.13.0",
     "serve": "^13.0.2",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
