--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "react-webpack",
-  "version": "1.0.0",
-  "description": "",
+  "name": "pockett",
+  "version": "0.1.0",
+  "description": "manage your money",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "serve": "serve build",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
-    "build:analyze": "npm run build -- --env addon=bundleanalyze"
+    "build:analyze": "npm run build -- --env addon=bundleanalyze",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,md,json}' --config ./.prettierrc"
   },
-  "author": "",
+  "author": "Shayan Bemanian",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -23,7 +26,13 @@
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
     "react-hot-loader": "^4.13.0",
     "serve": "^13.0.2",
     "style-loader": "^3.3.1",
@@ -46,5 +55,10 @@
     "react-query": "^3.34.6",
     "react-router-dom": "^6.2.1",
     "styled-components": "^5.3.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run format"
+    }
   }
 }
