--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,5 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
       "@containers/*": ["./src/containers/*"],
@@ -23,8 +10,26 @@
       "@theme": ["./src/theme"],
       "@utils/*": ["./src/utils/*"],
       "@assets/*": ["./src/assets/*"],
-      "@constants/*": ["./src/constants/*"]
-    }
+      "@constants/*": ["./src/constants/*"],
+      "~types/*": ["./src/theme/ty"]
+    },
+    "outDir": "dist",
+    "declaration": true,
+    "target": "es6",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "plugins": [{ "transform": "typescript-transform-paths" }]
   },
-  "exclude": ["node_modules"]
+  "include": ["src"]
 }
