feat: move to TypeScript

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "serve build",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "build:analyze": "npm run build -- --env addon=bundleanalyze",
-    "lint": "eslint .",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint:fix": "eslint --fix",
     "format": "pretty-quick --staged",
     "prepare": "husky install"
@@ -21,9 +21,12 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/runtime": "^7.16.5",
+    "@types/js-cookie": "^3.0.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.20",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.2.0",
@@ -56,6 +59,7 @@
     "joi": "^17.5.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "path-to-regexp": "^6.2.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
