--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,17 +8,22 @@
     "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 13,
+    "ecmaFeatures": { "jsx": true },
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/no-unescaped-entities": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "vars": "all", "argsIgnorePattern": "_", "varsIgnorePattern": "_" }
+    ]
   },
+
   "settings": {
     "react": {
       "version": "detect"
